# gridded_data_tips

./: CONDA_INSTALL_INSTRUCTIONS.txt  INSTALL_INSTRUCTIONS.md  Python_examples.ipynb  README.md  conda_env_file_ceh.txt  joe.md  pyproject.toml  requirements.in  requirements.txt  utils.py
example_data/: 20190828_Catchments.csv  20190828_Catchments.dbf  20190828_Catchments.sbn  20190828_Catchments.sbx  20190828_Catchments.shp.xml  20190828_Catchments.shx  20190828_Catchments.txt.xml  README.txt  gb_catchments.dbf  gb_catchments.sbn  gb_catchments.sbx  gb_catchments.shx  grass_era5_aphrodite_2014.nc
src/gridded_data_tips/: __init__.py
