[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridded_data_tips"
version = "0.1.0"
description = "Tools for working with gridded data"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "geopandas", 
    "param", 
    "panel",
    "folium",
    "pandas",
    "xarray==0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]